# iCub_crawling_old

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: left_armStiffnessConfig.ini
app/scripts/: gen.xml.template  gen_sim.xml.template  man.xml.template  vel_cont.xml.template  vel_cont_sim.xml.template
app/scripts/backup/: crawlGenerator.xml.template  crawlingHighLevel.xml.template  velImpControl.xml.template
doc/: Crawling.docx
src/crawlGenerator/: CMakeLists.txt  CrawlGeneratorModule.cpp  CrawlGeneratorModule.h  main.cpp
src/crawlHeadControl/: CrawlHeadControl.cpp  CrawlHeadControl.h  main.cpp
src/crawlManager/: CrawlManagerModule.cpp  CrawlManagerModule.h  main.cpp
src/multiMarkerTracker/: main.cpp
src/planner/: CMakeLists.txt
src/planner/common/.svn/: all-wcprops  entries
src/planner/crawlPlanner/: Potential.cpp
src/planner/crawlPlanner/.svn/: all-wcprops  entries
src/planner/crawlPlanner/.svn/text-base/: CMakeLists.txt.svn-base  CrawlPlanner.cpp.svn-base  CrawlPlanner.h.svn-base  main.cpp.svn-base
src/planner/plannerSupervisor/: CMakeLists.txt
src/planner/plannerSupervisor/.svn/: all-wcprops  entries
src/reachManager/: main.cpp
src/velImpControl/: CMakeLists.txt  main.cpp  velImpControlThread.h
